src/core/ccimgui_dear_bindings.pxd


    ctypedef struct ImDrawCmd:
        ImVec4 ClipRect
        ImTextureID TextureId
        unsigned int VtxOffset
        unsigned int IdxOffset
        unsigned int ElemCount
        ImDrawCallback UserCallback
        void* UserCallbackData

    ctypedef struct ImDrawVert:
        ImVec2 pos
        ImVec2 uv
        ImU32 col

    ctypedef struct ImDrawCmdHeader:
        ImVec4 ClipRect
        ImTextureID TextureId
        unsigned int VtxOffset

    ctypedef struct ImDrawChannel:
        ImVector_ImDrawCmd _CmdBuffer
        ImVector_ImDrawIdx _IdxBuffer

    ctypedef struct ImDrawListSplitter:
        int _Current
        int _Count
        ImVector_ImDrawChannel _Channels

    ctypedef struct ImDrawList:
        ImVector_ImDrawCmd CmdBuffer
        ImVector_ImDrawIdx IdxBuffer
        ImVector_ImDrawVert VtxBuffer
        ImDrawListFlags Flags
        unsigned int _VtxCurrentIdx
        ImDrawListSharedData* _Data
        const char* _OwnerName
        ImDrawVert* _VtxWritePtr
        ImDrawIdx* _IdxWritePtr
        ImVector_ImVec4 _ClipRectStack
        ImVector_ImTextureID _TextureIdStack
        ImVector_ImVec2 _Path
        ImDrawCmdHeader _CmdHeader
        ImDrawListSplitter _Splitter
        float _FringeScale

    ctypedef struct ImDrawData:
        bool Valid
        int CmdListsCount
        int TotalIdxCount
        int TotalVtxCount
        ImDrawList** CmdLists
        ImVec2 DisplayPos
        ImVec2 DisplaySize
        ImVec2 FramebufferScale
        ImGuiViewport* OwnerViewport

    ctypedef struct ImFontConfig:
        void* FontData
        int FontDataSize
        bool FontDataOwnedByAtlas
        int FontNo
        float SizePixels
        int OversampleH
        int OversampleV
        bool PixelSnapH
        ImVec2 GlyphExtraSpacing
        ImVec2 GlyphOffset
        const ImWchar* GlyphRanges
        float GlyphMinAdvanceX
        float GlyphMaxAdvanceX
        bool MergeMode
        unsigned int FontBuilderFlags
        float RasterizerMultiply
        ImWchar EllipsisChar
        char Name
        ImFont* DstFont

    ctypedef struct ImFontGlyph:
        unsigned int Colored
        unsigned int Visible
        unsigned int Codepoint
        float AdvanceX
        float X0
        float Y0
        float X1
        float Y1
        float U0
        float V0
        float U1
        float V1

    ctypedef struct ImFontGlyphRangesBuilder:
        ImVector_ImU32 UsedChars

    ctypedef struct ImFontAtlasCustomRect:
        unsigned short Width
        unsigned short Height
        unsigned short X
        unsigned short Y
        unsigned int GlyphID
        float GlyphAdvanceX
        ImVec2 GlyphOffset
        ImFont* Font

    ctypedef struct ImFontAtlas:
        ImFontAtlasFlags Flags
        ImTextureID TexID
        int TexDesiredWidth
        int TexGlyphPadding
        bool Locked
        void* UserData
        bool TexReady
        bool TexPixelsUseColors
        unsigned char* TexPixelsAlpha8
        unsigned int* TexPixelsRGBA32
        int TexWidth
        int TexHeight
        ImVec2 TexUvScale
        ImVec2 TexUvWhitePixel
        ImVector_ImFontPtr Fonts
        ImVector_ImFontAtlasCustomRect CustomRects
        ImVector_ImFontConfig ConfigData
        ImVec4 TexUvLines
        const ImFontBuilderIO* FontBuilderIO
        unsigned int FontBuilderFlags
        int PackIdMouseCursors
        int PackIdLines

    ctypedef struct ImFont:
        ImVector_float IndexAdvanceX
        float FallbackAdvanceX
        float FontSize
        ImVector_ImWchar IndexLookup
        ImVector_ImFontGlyph Glyphs
        const ImFontGlyph* FallbackGlyph
        ImFontAtlas* ContainerAtlas
        const ImFontConfig* ConfigData
        short ConfigDataCount
        ImWchar FallbackChar
        ImWchar EllipsisChar
        short EllipsisCharCount
        float EllipsisWidth
        float EllipsisCharStep
        bool DirtyLookupTables
        float Scale
        float Ascent
        float Descent
        int MetricsTotalSurface
        ImU8 Used4kPagesMap

    ctypedef struct ImGuiViewport:
        ImGuiID ID
        ImGuiViewportFlags Flags
        ImVec2 Pos
        ImVec2 Size
        ImVec2 WorkPos
        ImVec2 WorkSize
        float DpiScale
        ImGuiID ParentViewportId
        ImDrawData* DrawData
        void* RendererUserData
        void* PlatformUserData
        void* PlatformHandle
        void* PlatformHandleRaw
        bool PlatformWindowCreated
        bool PlatformRequestMove
        bool PlatformRequestResize
        bool PlatformRequestClose

    ctypedef struct ImGuiPlatformIO:
        void (*Platform_CreateWindow)(ImGuiViewport* vp)
        void (*Platform_DestroyWindow)(ImGuiViewport* vp)
        void (*Platform_ShowWindow)(ImGuiViewport* vp)
        void (*Platform_SetWindowPos)(ImGuiViewport* vp, ImVec2 pos)
        ImVec2 (*Platform_GetWindowPos)(ImGuiViewport* vp)
        void (*Platform_SetWindowSize)(ImGuiViewport* vp, ImVec2 size)
        ImVec2 (*Platform_GetWindowSize)(ImGuiViewport* vp)
        void (*Platform_SetWindowFocus)(ImGuiViewport* vp)
        bool (*Platform_GetWindowFocus)(ImGuiViewport* vp)
        bool (*Platform_GetWindowMinimized)(ImGuiViewport* vp)
        void (*Platform_SetWindowTitle)(ImGuiViewport* vp, const char* str)
        void (*Platform_SetWindowAlpha)(ImGuiViewport* vp, float alpha)
        void (*Platform_UpdateWindow)(ImGuiViewport* vp)
        void (*Platform_RenderWindow)(ImGuiViewport* vp, void* render_arg)
        void (*Platform_SwapBuffers)(ImGuiViewport* vp, void* render_arg)
        float (*Platform_GetWindowDpiScale)(ImGuiViewport* vp)
        void (*Platform_OnChangedViewport)(ImGuiViewport* vp)
        int (*Platform_CreateVkSurface)(ImGuiViewport* vp, ImU64 vk_inst, const void* vk_allocators, ImU64* out_vk_surface)
        void (*Renderer_CreateWindow)(ImGuiViewport* vp)
        void (*Renderer_DestroyWindow)(ImGuiViewport* vp)
        void (*Renderer_SetWindowSize)(ImGuiViewport* vp, ImVec2 size)
        void (*Renderer_RenderWindow)(ImGuiViewport* vp, void* render_arg)
        void (*Renderer_SwapBuffers)(ImGuiViewport* vp, void* render_arg)
        ImVector_ImGuiPlatformMonitor Monitors
        ImVector_ImGuiViewportPtr Viewports

    ctypedef struct ImGuiPlatformMonitor:
        ImVec2 MainPos
        ImVec2 MainSize
        ImVec2 WorkPos
        ImVec2 WorkSize
        float DpiScale

    ctypedef struct ImGuiPlatformImeData:
        bool WantVisible
        ImVec2 InputPos
        float InputLineHeight

